unpackaged/main/default/objects/Assessment_Section__c/Assessment_Section__c.object-meta.xml
<CustomObject>
    <label>Assessment Section</label>
    <nameField>
        <label>Assessment Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>