unpackaged/main/default/objects/Assessment_Section__c/fields/Skip_section__c.field-meta.xml
<CustomField>
    <fullName>Skip_section__c</fullName>
    <defaultValue>'No'</defaultValue>
    <label>Skip section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>