unpackaged/main/default/objects/Assessment_Section__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <label>Theme</label>
    <referenceTo>Assessment_Theme__c</referenceTo>
    <relationshipLabel>Assessment Sections</relationshipLabel>
    <relationshipName>Assessment_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>